--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment|Muhire</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="1">
   
 <div class="container">
     <div class="row">
         <div class="col-12"> 
-
+          <div aria-live="polite" aria-atomic="true" style="position: relative; max-height: 200px;">
+            <img src="./assets/images/icons8-ios-logo-64.png" class="img-fluid" alt="Responsive image">
+          </div>
         </div>
         <div class="col-12"> 
             <ul class="nav">
