--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
             <img src="./assets/images/icons8-ios-logo-64.png" class="img-fluid" alt="Responsive image">
           </div>
         </div>
-        <div class="col-12"> 
-            <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link active" href="./index.html">Home</a>
+        <div class="col-12 "> 
+            <ul class="nav bg-secondary">
+                <li class="nav-item border border-info">
+                  <a class="nav-link active text-light" href="./index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
+                <li class="nav-item w-20 border border-info">
+                  <a class="nav-link text-light" href="./pages/about.html">About Us</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
+                <li class="nav-item w-20 border border-info">
+                  <a class="nav-link text-light" href="#">Contact Us</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portifolio</a>
+                <li class="nav-item w-20 border border-info">
+                    <a class="nav-link text-light" href="#">Portifolio</a>
                   </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                <li class="nav-item w-20 border border-info" >
+                    <a class="nav-link text-light" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item w-20 border border-info" >
+                    <a class="nav-link text-light" href="#">SignIn</a>
                   </li>
               </ul>
         </div>
@@ -72,11 +75,11 @@
                       <h1>JAVASCRIPT</h1>
                       <p>Try to scroll this section and look at the navigation list while scrolling!</p>
                     </div>
-                    <div id="section3" class="bg-secondary">         
+                    <div id="section3" class="bg-success">         
                         <h1>JAVA</h1>
                         <p>Try to scroll this section and look at the navigation list while scrolling!</p>
                       </div>
-                      <div id="section3" class="bg-secondary">         
+                      <div id="section3" class="bg-warning">         
                         <h1>C#</h1>
                         <p>Try to scroll this section and look at the navigation list while scrolling!</p>
                       </div>
@@ -85,8 +88,15 @@
               </div>  
         </div>        
         <div class="col-3">
-            <h3>CSS From bootstrap</h3>
-            <p>Automatically update Bootstrap navigation or list group components based on scroll position to indicate which link is currently active in the viewport.</p>
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action active">
+              CSS BOOTSTRAP
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">Themes</a>
+            <a href="#" class="list-group-item list-group-item-action">Examples</a>
+            <a href="#" class="list-group-item list-group-item-action">Classes</a>
+            <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Final assessment</a>
+          </div>
         </div>    
         </div>
    
