--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
                   </li>
               </ul>
         </div>
-
+    <div class="col-12 "> 
         <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address</label>
@@ -68,6 +68,7 @@
               <label for="exampleFormControlTextarea1">Example textarea</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
           </form>   
         </div>
    
