--- a/pages/about.html
+++ b/pages/about.html
@@ -22,10 +22,10 @@
                   <a class="nav-link active text-light" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item w-20 border border-info">
-                  <a class="nav-link text-light" href="#">About Us</a>
+                  <a class="nav-link text-light" href="./about.html">About Us</a>
                 </li>
                 <li class="nav-item w-20 border border-info">
-                  <a class="nav-link text-light" href="#">Contact Us</a>
+                  <a class="nav-link text-light" href="./contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item w-20  border border-info">
                     <a class="nav-link text-light" href="#">Portifolio</a>
