--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <a class="nav-link text-light" href="./pages/about.html">About Us</a>
                 </li>
                 <li class="nav-item w-20 border border-info">
-                  <a class="nav-link text-light" href="#">Contact Us</a>
+                  <a class="nav-link text-light" href="./pages/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item w-20 border border-info">
                     <a class="nav-link text-light" href="#">Portifolio</a>
