--- a/pages/about.html
+++ b/pages/about.html
@@ -39,8 +39,8 @@
               </ul>
         </div>
 
-        <div class="col-3">
-            <h3>CSS From bootstrap</h3>
+        <div class="col-12">
+            <h3>Here It is the information about us</h3>
             <p>Automatically update Bootstrap navigation or list group components based on scroll position to indicate which link is currently active in the viewport.</p>
         </div>    
         </div>
