--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="./assets/images/icons8-ios-logo-64.png" class="img-fluid" alt="Responsive image">
           </div>
         </div>
-        <div class="col-12 "> 
+        <div class="col-12"> 
             <ul class="nav bg-secondary">
                 <li class="nav-item border border-info">
                   <a class="nav-link active text-light" href="./index.html">Home</a>
@@ -38,7 +38,7 @@
                   </li>
               </ul>
         </div>
-        <div class="col-8">
+        <div class="col-8 mt-5">
             <div class="container-fluid">
                 <div class="row">
                   <nav class="col-sm-4 col-4" id="myScrollspy">
@@ -87,7 +87,7 @@
                 </div>
               </div>  
         </div>        
-        <div class="col-3">
+        <div class="col-3 mt-5">
           <div class="list-group">
             <a href="#" class="list-group-item list-group-item-action active">
               CSS BOOTSTRAP
