--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
               </ul>
         </div>
 
-        <div class="col-12">
+        <div class="col-12 mt-5">
             <h3>Here It is the information about us</h3>
             <p>Automatically update Bootstrap navigation or list group components based on scroll position to indicate which link is currently active in the viewport.</p>
         </div>    
