--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                   <a class="nav-link text-light" href="./pages/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item w-20 border border-info">
-                    <a class="nav-link text-light" href="#">Portifolio</a>
+                    <a class="nav-link text-light" href="./pages/portifolio.html">Portifolio</a>
                   </li>
                 <li class="nav-item w-20 border border-info" >
-                    <a class="nav-link text-light" href="#">Blog</a>
+                    <a class="nav-link text-light" href="./pages/blog.html">Blog</a>
                   </li>
                   <li class="nav-item w-20 border border-info" >
-                    <a class="nav-link text-light" href="#">SignIn</a>
+                    <a class="nav-link text-light" href="./pages/sigin.html">SignIn</a>
                   </li>
               </ul>
         </div>
