--- a/pages/about.html
+++ b/pages/about.html
@@ -28,13 +28,13 @@
                   <a class="nav-link text-light" href="./contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item w-20  border border-info">
-                    <a class="nav-link text-light" href="#">Portifolio</a>
+                    <a class="nav-link text-light" href="./portifolio.html">Portifolio</a>
                   </li>
                 <li class="nav-item w-20  border border-info">
-                    <a class="nav-link text-light" href="#">Blog</a>
+                    <a class="nav-link text-light" href="./blog.html">Blog</a>
                   </li>
                   <li class="nav-item w-20  border border-info" >
-                    <a class="nav-link text-light" href="#">SignIn</a>
+                    <a class="nav-link text-light" href="./sigin.html">SignIn</a>
                   </li>
               </ul>
         </div>
