--- a/pages/portifolio.html
+++ b/pages/portifolio.html
@@ -34,7 +34,7 @@
                     <a class="nav-link text-light" href="./blog.html">Blog</a>
                   </li>
                   <li class="nav-item w-20  border border-info" >
-                    <a class="nav-link text-light" href="#">SignIn</a>
+                    <a class="nav-link text-light" href="./sigin.html">SignIn</a>
                   </li>
               </ul>
         </div>
