--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
         <div class="col-3 mt-5">
           <div class="list-group">
             <a href="#" class="list-group-item list-group-item-action active">
-              CSS BOOTSTRAP
+              CSS FrameWork
             </a>
-            <a href="#" class="list-group-item list-group-item-action">Themes</a>
-            <a href="#" class="list-group-item list-group-item-action">Examples</a>
-            <a href="#" class="list-group-item list-group-item-action">Classes</a>
+            <a href="#" class="list-group-item list-group-item-action">Bootstrap</a>
+            <a href="#" class="list-group-item list-group-item-action">Foundation </a>
+            <a href="#" class="list-group-item list-group-item-action">Materialize</a>
+            <a href="#" class="list-group-item list-group-item-action">Semantic UI</a>
+            <a href="#" class="list-group-item list-group-item-action">Bulma</a>
+            <a href="#" class="list-group-item list-group-item-action">UIKit</a>
             <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Final assessment</a>
           </div>
         </div>    
